--- a/views/encodeblock.pug
+++ b/views/encodeblock.pug
@@ -10,7 +10,12 @@ block content
     br
     button#encode_button(type='button', onclick='SelectorEnc()') Encode
     button#Decode_button(type='button', onclick='SelectorDec()') Decode
+    button#Send(type='button', onlick='') Send
   form
     select#select_area
       option(value='pharao') Pharao
       option(value='rot13') Rot13
+      #output_area
+    p
+      #output
+    div
