--- a/views/outside/loginerr.pug
+++ b/views/outside/loginerr.pug
@@ -1,5 +1,8 @@
 extends layout
 
 block content
-  h1= Error
+  h1= title
   p incorrect username or password
+
+  form(method='get', action='/redirect')
+    button(type='submit') login
