--- a/views/outside/loginerr.pug
+++ b/views/outside/loginerr.pug
@@ -4,5 +4,4 @@ block content
   h1= title
   p incorrect username or password
 
-  form(method='get', action='/redirect')
-    button(type='submit') login
+  include loginform.pug
