--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,6 +3,8 @@ html
   head
   block head
     link(rel='stylesheet', href='/stylesheets/style.css')
+    h1= title
+    p= extra
   block scripts
   body
     block content
