--- a/views/outside/loginform.pug
+++ b/views/outside/loginform.pug
@@ -1,10 +1,11 @@
-extends layout
+include layout.pug
 
-block content
-  form(action='/login', method='POST')
-    input(type='text', name='username')
-    br
-    input(type='password', name='password')
-    br
-    input(type='submit', name='login')
-    br
+block login
+  p Login
+    form(action='/login', method='POST')
+      input(type='text', name='username')
+      br
+      input(type='password', name='password')
+      br
+      input(type='submit', name='login')
+      br
