--- a/views/encodeblock.pug
+++ b/views/encodeblock.pug
@@ -5,6 +5,8 @@ block scripts
 
 
 block content
+
+  a(href='/users') Messages
   #input_area
     textarea#message(rows='8', cols='85', autofocus='') rats live on no evil star
     br
@@ -24,3 +26,4 @@ block content
     br
     input(type='password', name='password')
     input(type='submit', name='login')
+  a(href='/register') Register
