--- a/views/loginform.pug
+++ b/views/loginform.pug
@@ -1,7 +1,7 @@
 include layout.pug
 
 block content
-  
+a(href='/register') Register  
 form(action='/login', method='POST')
   input(type='text', name='username')
 
