--- a/views/outside/registerr.pug
+++ b/views/outside/registerr.pug
@@ -4,3 +4,5 @@ block content
 
   form(method='get', action='/register')
     button(type='register') Register
+  form(method='get', action='/login')
+    button(type='register') Login
